# stac-fastapi-elasticsearch-opensearch

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  AQUAVIEW.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.deploy  Dockerfile.deploy.os  Dockerfile.dev  Dockerfile.dev.es  Dockerfile.dev.os  Dockerfile.docs  Dockerfile.elasticsearch  Dockerfile.mongo  LICENSE  Makefile  README.md  cloudbuild.yaml  compose-redis.yml  compose.docs.yml  compose.es.deploy.yml  compose.go.validator.yml  compose.os.deploy.yml  compose.yml  data_loader.py  docker-compose.basic_auth_protected.yml  docker-compose.basic_auth_public.yml  docker-compose.docs.yml  docker-compose.elasticsearch.yml  docker-compose.redis.yml  docker-compose.route_dependencies.yml  docker-compose.route_dependencies_env.yml  docker-compose.route_dependencies_file.yml  docker-compose.yml  index.html  mypy.ini  pyproject.toml  (+4 more)
.github/: ct-config.yaml  ct-lint.yaml  ct.yaml  dependabot.yml  pull_request_template.md
.github/workflows/: cicd.yaml  cicd.yml  (+6 more)
aggregation/: index.html
ci/: before_tests.sh  build.sh  compliance.sh  deploy.sh  pytest-datetime.sh  pytest.sh  tag_image.sh
contributing/: index.html
data_loader/: data_loader.py
dockerfiles/: Dockerfile.ci.es  Dockerfile.ci.os  Dockerfile.deploy.es  Dockerfile.deploy.mongo  Dockerfile.deploy.os  Dockerfile.dev.es  Dockerfile.dev.es-os  Dockerfile.dev.mongo  Dockerfile.dev.os  Dockerfile.dev.serverless.es  Dockerfile.docs  entrypoint-es.sh  entrypoint-os.sh
docs/: mkdocs.yml
examples/: README.md
helm-chart/: DEPLOYMENT.md  test-chart.sh
postman_collections/: stac-fastapi-elasticsearch.postman_collection.json
release-notes/: index.html
sample_data/: collection.json  sentinel-s2-l2a-cogs_0_100.json
scripts/: item_queue_worker.py  publish  reindex_elasticsearch.py  reindex_opensearch.py
search/: search_index.json
setup_data/: sentinel-s2-l2a-cogs_0_100.json
sfeos_tools/: LICENSE  README.md  setup.py
stac_api/: __init__.py
stac_fastapi/core/: README.md  pyproject.toml  setup.cfg  setup.py
stac_fastapi/core/stac_fastapi/core/: __init__.py  access_control.py  base_database_logic.py  base_settings.py  basic_auth copy.py  basic_auth.py  catalogs_client.py  core.py  database_logic.py  datetime_utils.py  exceptions.py  header_filters.py  private_fields_config.py  queryables.py  rate_limit.py  redis_utils.py  route_dependencies.py  serializers.py  session.py  utilities.py  validate.py  version.py
stac_fastapi/core/stac_fastapi/core/extensions/: __init__.py  aggregation.py  catalogs.py  collection_post_search.py  collections_search.py  fields.py  filter.py  query.py
stac_fastapi/core/stac_fastapi/core/models/: __init__.py  links.py  patch.py  search.py
stac_fastapi/core/stac_fastapi/core/multi_tenant_catalogs/: catalogs.py  types.py
stac_fastapi/core/stac_fastapi/core/types/: core.py
stac_fastapi/elasticsearch/: README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/: __init__.py  app.py  basic_auth.py  config.py  core.py  database_logic.py  indexes.py  serializers.py  t.json  transactions.py  utilities.py  version.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/config/: __init__.py  config_elasticsearch.py  config_opensearch.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/database_elasticsearch/: database_logic.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/database_logic/: __init__.py  database_logic_elasticsearch.py  database_logic_opensearch.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/database_opensearch/: database_logic.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/extensions/: filter.py
stac_fastapi/elasticsearch/stac_fastapi/elasticsearch/types/: error_checks.py
stac_fastapi/elasticsearch/tests/: conftest.py
stac_fastapi/elasticsearch/tests/api/: test_api.py
stac_fastapi/elasticsearch/tests/clients/: test_elasticsearch.py
stac_fastapi/elasticsearch/tests/data/: test_item.json
stac_fastapi/elasticsearch/tests/extensions/: test_filter.py
stac_fastapi/elasticsearch/tests/extensions/cql2/: example21.json  example22.json
stac_fastapi/elasticsearch/tests/resources/: test_collection.py  test_conformance.py  test_item.py
stac_fastapi/opensearch/: README.md  pyproject.toml  setup.cfg  setup.py
stac_fastapi/opensearch/stac_fastapi/opensearch/: __init__.py  am_version.py  app.py  config.py  database_logic.py  version.py
stac_fastapi/opensearch/tests/: conftest.py
stac_fastapi/opensearch/tests/extensions/cql2/: example19.json
stac_fastapi/opensearch/tests/resources/: test_item.py
stac_fastapi/sfeos_helpers/: README.md  pyproject.toml  setup.cfg  setup.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/: catalogs.py  config.py  database_logic_helpers.py  filter.py  mappings.py  metrics.py  queryables.py  utilities.py  version.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/aggregation/: README.md  __init__.py  client.py  format.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/database/: README.md  __init__.py  catalogs.py  datetime.py  document.py  index.py  mapping.py  query.py  utils.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/filter/: README.md  __init__.py  ast_parser.py  ast_transform.py  client.py  cql2.py  datetime_optimizer.py  transform.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/mappings_custom/: mappings_custom.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/models/: dynamic_template.py  extensions.py  patch.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/search_engine/: __init__.py  adapters.py  async_inserters.py  base.py  factory.py  index_operations.py  inserters.py  managers.py  sync_inserters.py  types.py
stac_fastapi/sfeos_helpers/stac_fastapi/sfeos_helpers/search_engine/selection/: __init__.py  async_selectors.py  base.py  cache_manager.py  factory.py  selectors.py  sync_selectors.py  unfiltered_selector.py
stylesheets/: extra.css
tips-and-tricks/: index.html
(+283 files in other folders)
