[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stac_fastapi_core"
description = "Core library for the Elasticsearch and Opensearch stac-fastapi backends."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "STAC",
    "STAC-API",
    "FastAPI",
    "stac-fastapi",
    "Elasticsearch",
    "Opensearch",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.109,<0.140",
    "attrs>=23.2.0",
    "pydantic>=2.4.1,<3.0.0",
    "stac_pydantic>=3.3,<3.7",
    "stac-fastapi.types==6.3.2",
    "stac-fastapi.api==6.3.2",
    "stac-fastapi.extensions==6.3.2",
    "orjson~=3.11.0",
    "overrides>=7.4,<7.8",
    "pygeofilter>=0.3.1,<0.5.0",
    "jsonschema~=4.26.0",
    "slowapi~=0.1.9",
    "uvicorn>=0.23,<0.52",
    "starlette>=0.35.0,<1.4.0",
]

[project.optional-dependencies]
redis = [
    "redis>=6.4,<8.1",
    "retry~=0.9.2",
]
sentry = [
    "sentry-sdk>=2.49,<2.65",
]
catalogs = [
    "stac-fastapi-catalogs-extension==0.5.0",
]
validator = [
    "stac-valid>=4.2.2,<4.5.0"
]

[project.urls]
Homepage = "https://github.com/stac-utils/stac-fastapi-elasticsearch-opensearch"

[tool.hatch.version]
path = "stac_fastapi/core/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["alembic", "tests", "scripts"]

[tool.hatch.build.targets.wheel]
only-include = ["stac_fastapi"]
