[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfeos_helpers"
description = "Helper library for the Elasticsearch and Opensearch stac-fastapi backends."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "STAC",
    "STAC-API",
    "FastAPI",
    "stac-fastapi",
    "Elasticsearch",
    "Opensearch",
]
dynamic = ["version"]
dependencies = [
    "stac-fastapi.core==6.7.6",
]

[project.urls]
Homepage = "https://github.com/stac-utils/stac-fastapi-elasticsearch-opensearch"

[tool.hatch.version]
path = "stac_fastapi/sfeos_helpers/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["alembic", "tests", "scripts"]

[tool.hatch.build.targets.wheel]
only-include = ["stac_fastapi"]
